# holychords-bot

./: .env.ren  .gitignore  Dockerfile  Makefile  buf.gen.yaml  buf.yaml  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  api.py
app/commands/: default.py
app/handlers/users/: __init__.py  donate.py  inline.py  library.py  search.py  song.py
app/keyboards/: __init__.py  donate.py  names.py  song.py
app/middlewares/: __init__.py  database.py  user.py
app/services/: __init__.py
data/: config.py
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
database/: base.py
database/models/: __init__.py  base.py  song.py  user.py
migrations/: env.py
migrations/versions/: 188280333628_added_tables.py  7dc766f6c381_added_tables.py  87c0acf47e10_added_tables.py
proto/songs/: songs.proto
