[project]
name = "holychords-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "environs>=14.2.0",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.2",
    "pydantic>=2.11.7",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests-html>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "surrealdb>=1.0.6",
]
