[project]
name = "holychords-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "babel>=2.17.0",
    "environs>=14.5.0",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.3",
    "pydantic>=2.12.5",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "requests-html>=0.10.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "surrealdb>=1.0.8",
]
